Aligned go button correctly

--- a/src/assets/sass/_vars.scss
+++ b/src/assets/sass/_vars.scss
@@ -108,7 +108,7 @@ $type-settings: (
 /* SPACING ------------------------------------------------------------------ */
 /* -------------------------------------------------------------------------- */
 // Padding
-$padding-sm: 10px;
+$padding-sm: $base-line-height / 2;
 $padding-md: $base-line-height;
 $padding-lg: $base-line-height * 2;
 $padding-xl: $base-line-height * 3;
