--- a/src/views/components/form-elements/search/_search.scss
+++ b/src/views/components/form-elements/search/_search.scss
@@ -3,6 +3,9 @@
   &__wrapper {
     position: relative;
     display: inline-block;
+    width: calc(100% - 60px);
+    margin-right: $margin-sm;
+
     // Search icon embeded in container to overwrite FontAwesome defaults
     .fe-autocomplete__icon {
       @include type-setting(1);
@@ -20,7 +23,6 @@
 
   &__input {
     padding-left: 40px;
-    margin-right: 10px;
 
     &::placeholder {
       font-weight: bold;
